deploy: 78f48b3bdb4830562a7f8ad47d29481b25846bf9

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -775,16 +775,22 @@
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.extract">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
 </li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.extract">(dgbowl_schemas.Recipe attribute)</a>
+</li>
       </ul></li>
-      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_methodfile">extract_methodfile() (dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.Payload.extract_methodfile">extract_methodfile() (dgbowl_schemas.Payload class method)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_methodfile">(dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+</li>
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.extract_methodfile">(dgbowl_schemas.tomato.payload_0_2.Payload class method)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_samplefile">extract_samplefile() (dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.Payload.extract_samplefile">extract_samplefile() (dgbowl_schemas.Payload class method)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_samplefile">(dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+</li>
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.extract_samplefile">(dgbowl_schemas.tomato.payload_0_2.Payload class method)</a>
 </li>
       </ul></li>
@@ -1103,6 +1109,8 @@
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.load">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
 </li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.load">(dgbowl_schemas.Recipe attribute)</a>
+</li>
       </ul></li>
   </ul></td>
 </tr></table>
@@ -1120,9 +1128,11 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.externaldate.ExternalDateFile.Content.match">(dgbowl_schemas.yadg.dataschema_5_0.externaldate.ExternalDateFile.Content attribute)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.DataSchema.metadata">metadata (dgbowl_schemas.yadg.dataschema_4_0.DataSchema attribute)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.DataSchema.metadata">metadata (dgbowl_schemas.DataSchema attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.DataSchema.metadata">(dgbowl_schemas.yadg.dataschema_4_0.DataSchema attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.DataSchema.metadata">(dgbowl_schemas.yadg.dataschema_4_1.DataSchema attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.metadata.Metadata.Provenance.metadata">(dgbowl_schemas.yadg.dataschema_4_1.metadata.Metadata.Provenance attribute)</a>
@@ -1136,9 +1146,11 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.metadata.Metadata.Provenance.metadata">(dgbowl_schemas.yadg.dataschema_5_0.metadata.Metadata.Provenance attribute)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.method">method (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.Payload.method">method (dgbowl_schemas.Payload attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.method">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.method">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.method">(dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
@@ -1512,6 +1524,8 @@
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.plot">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
 </li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.plot">(dgbowl_schemas.Recipe attribute)</a>
+</li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output.prefix">prefix (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output attribute)</a>
 
@@ -1567,9 +1581,11 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.sample">sample (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.Payload.sample">sample (dgbowl_schemas.Payload attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.sample">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.sample">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
 </li>
       </ul></li>
@@ -1581,6 +1597,8 @@
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.plot.Plot.save">(dgbowl_schemas.dgpost.recipe_1_1.plot.Plot attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.save">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.save">(dgbowl_schemas.Recipe attribute)</a>
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.BasicCSV.Params.sep">sep (dgbowl_schemas.yadg.dataschema_4_0.step.BasicCSV.Params attribute)</a>
@@ -1623,9 +1641,11 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.ChromTrace.Params.species">(dgbowl_schemas.yadg.dataschema_4_2.step.ChromTrace.Params attribute)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.At.steps">steps (dgbowl_schemas.dgpost.recipe_1_0.extract.At attribute)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.DataSchema.steps">steps (dgbowl_schemas.DataSchema attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.At.steps">(dgbowl_schemas.dgpost.recipe_1_0.extract.At attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.extract.At.steps">(dgbowl_schemas.dgpost.recipe_1_1.extract.At attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.DataSchema.steps">(dgbowl_schemas.yadg.dataschema_4_0.DataSchema attribute)</a>
@@ -1763,8 +1783,6 @@
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.plot.PlotSave.tight_layout">(dgbowl_schemas.dgpost.recipe_1_1.plot.PlotSave attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.timestamp.TimeDate.time">time (dgbowl_schemas.yadg.dataschema_4_0.timestamp.TimeDate attribute)</a>
 
       <ul>
@@ -1775,6 +1793,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.timestamp.TimeDate.time">(dgbowl_schemas.yadg.dataschema_5_0.timestamp.TimeDate attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.BasicCSV.Params.timestamp">timestamp (dgbowl_schemas.yadg.dataschema_4_0.step.BasicCSV.Params attribute)</a>
 
       <ul>
@@ -1817,21 +1837,35 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.metadata.Metadata.timezone">(dgbowl_schemas.yadg.dataschema_5_0.metadata.Metadata attribute)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.yadg.html#dgbowl_schemas.yadg.to_dataschema">to_dataschema() (in module dgbowl_schemas.yadg)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.to_dataschema">to_dataschema() (in module dgbowl_schemas)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.html#dgbowl_schemas.yadg.to_dataschema">(in module dgbowl_schemas.yadg)</a>
 </li>
-      <li><a href="dgbowl_schemas.tomato.html#dgbowl_schemas.tomato.to_payload">to_payload() (in module dgbowl_schemas.tomato)</a>
+      </ul></li>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.to_payload">to_payload() (in module dgbowl_schemas)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.html#dgbowl_schemas.tomato.to_payload">(in module dgbowl_schemas.tomato)</a>
 </li>
-      <li><a href="dgbowl_schemas.dgpost.html#dgbowl_schemas.dgpost.to_recipe">to_recipe() (in module dgbowl_schemas.dgpost)</a>
+      </ul></li>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.to_recipe">to_recipe() (in module dgbowl_schemas)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.dgpost.html#dgbowl_schemas.dgpost.to_recipe">(in module dgbowl_schemas.dgpost)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.plot.SeriesIndex.to_units">to_units (dgbowl_schemas.dgpost.recipe_1_0.plot.SeriesIndex attribute)</a>
 
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.plot.SeriesIndex.to_units">(dgbowl_schemas.dgpost.recipe_1_1.plot.SeriesIndex attribute)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.tomato">tomato (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.Payload.tomato">tomato (dgbowl_schemas.Payload attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.tomato">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.tomato">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
 </li>
       </ul></li>
@@ -1839,6 +1873,8 @@
 
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.transform">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.transform">(dgbowl_schemas.Recipe attribute)</a>
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.ElectroChem.Params.transpose">transpose (dgbowl_schemas.yadg.dataschema_4_2.step.ElectroChem.Params attribute)</a>
@@ -1955,6 +1991,10 @@
 
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.version">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Payload.version">(dgbowl_schemas.Payload attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.version">(dgbowl_schemas.Recipe attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.version">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
 </li>
