deploy: a737710c60efe5e69eb9b3ddfafb39bf4507916b

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -1933,6 +1933,14 @@
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.unlock_when_done">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.DataSchema.update">update() (dgbowl_schemas.yadg.dataschema_4_0.DataSchema method)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.DataSchema.update">(dgbowl_schemas.yadg.dataschema_4_1.DataSchema method)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.DataSchema.update">(dgbowl_schemas.yadg.dataschema_4_2.DataSchema method)</a>
+</li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.transform.Transform.using">using (dgbowl_schemas.dgpost.recipe_1_0.transform.Transform attribute)</a>
 
       <ul>
