deploy: 95ea165b89fbb31354844011170d079b6e17a184

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -451,8 +451,6 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#module-dgbowl_schemas.yadg.dataschema_4_0">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.yadg.dataschema_4_0.externaldate
 
@@ -460,6 +458,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#module-dgbowl_schemas.yadg.dataschema_4_0.externaldate">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.yadg.dataschema_4_0.input
 
@@ -608,6 +608,13 @@
 </li>
       </ul></li>
       <li>
+    dgbowl_schemas.yadg.dataschema_5_0.filetype
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.filetype">module</a>
+</li>
+      </ul></li>
+      <li>
     dgbowl_schemas.yadg.dataschema_5_0.input
 
       <ul>
@@ -633,6 +640,13 @@
 
       <ul>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.step">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.yadg.dataschema_5_0.stepdefaults
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.stepdefaults">module</a>
 </li>
       </ul></li>
       <li>
@@ -669,9 +683,15 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.ElectroChem.Input.encoding">(dgbowl_schemas.yadg.dataschema_4_2.step.ElectroChem.Input attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.input.Input.encoding">(dgbowl_schemas.yadg.dataschema_5_0.input.Input attribute)</a>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.EClab_mpt.encoding">(dgbowl_schemas.yadg.dataschema_5_0.filetype.EClab_mpt attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.Input.encoding">(dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.Input attribute)</a>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType.encoding">(dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.encoding">(dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Parser.encoding">(dgbowl_schemas.yadg.dataschema_5_0.step.Parser attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults.encoding">(dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults attribute)</a>
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.input.Input.exclude">exclude (dgbowl_schemas.yadg.dataschema_4_0.input.Input attribute)</a>
@@ -881,6 +901,14 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.XRDTrace.Params.filetype">(dgbowl_schemas.yadg.dataschema_4_2.step.XRDTrace.Params attribute)</a>
 </li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.EClab_mpr.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.EClab_mpr attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.EClab_mpt.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.EClab_mpt attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.Tomato_json.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.Tomato_json attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ChromData.filetype">(dgbowl_schemas.yadg.dataschema_5_0.step.ChromData attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ChromTrace.filetype">(dgbowl_schemas.yadg.dataschema_5_0.step.ChromTrace attribute)</a>
@@ -1037,8 +1065,6 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.XRDTrace.input">(dgbowl_schemas.yadg.dataschema_4_2.step.XRDTrace attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.input">(dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem attribute)</a>
-</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Parser.input">(dgbowl_schemas.yadg.dataschema_5_0.step.Parser attribute)</a>
 </li>
       </ul></li>
@@ -1112,6 +1138,16 @@
         <li><a href="dgbowl_schemas.html#dgbowl_schemas.Recipe.load">(dgbowl_schemas.Recipe attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType.locale">locale (dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Parser.locale">(dgbowl_schemas.yadg.dataschema_5_0.step.Parser attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults.locale">(dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults.locale_set_default">locale_set_default() (dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults class method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -1274,6 +1310,8 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.externaldate">dgbowl_schemas.yadg.dataschema_5_0.externaldate</a>
 </li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.filetype">dgbowl_schemas.yadg.dataschema_5_0.filetype</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.input">dgbowl_schemas.yadg.dataschema_5_0.input</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.metadata">dgbowl_schemas.yadg.dataschema_5_0.metadata</a>
@@ -1281,6 +1319,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.parameters">dgbowl_schemas.yadg.dataschema_5_0.parameters</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.step">dgbowl_schemas.yadg.dataschema_5_0.step</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.stepdefaults">dgbowl_schemas.yadg.dataschema_5_0.stepdefaults</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#module-dgbowl_schemas.yadg.dataschema_5_0.timestamp">dgbowl_schemas.yadg.dataschema_5_0.timestamp</a>
 </li>
@@ -1629,16 +1669,22 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.BasicCSV.Params.sigma">(dgbowl_schemas.yadg.dataschema_4_2.step.BasicCSV.Params attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.snapshot">snapshot (dgbowl_schemas.tomato.payload_0_2.tomato.Tomato attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.ChromTrace.Params.species">species (dgbowl_schemas.yadg.dataschema_4_0.step.ChromTrace.Params attribute)</a>
 
       <ul>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.ChromTrace.Params.species">(dgbowl_schemas.yadg.dataschema_4_1.step.ChromTrace.Params attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.ChromTrace.Params.species">(dgbowl_schemas.yadg.dataschema_4_2.step.ChromTrace.Params attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="dgbowl_schemas.html#dgbowl_schemas.DataSchema.step_defaults">step_defaults (dgbowl_schemas.DataSchema attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.DataSchema.step_defaults">(dgbowl_schemas.yadg.dataschema_5_0.DataSchema attribute)</a>
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.html#dgbowl_schemas.DataSchema.steps">steps (dgbowl_schemas.DataSchema attribute)</a>
@@ -1834,7 +1880,17 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.metadata.Metadata.timezone">(dgbowl_schemas.yadg.dataschema_4_2.metadata.Metadata attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.metadata.Metadata.timezone">(dgbowl_schemas.yadg.dataschema_5_0.metadata.Metadata attribute)</a>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType.timezone">(dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Parser.timezone">(dgbowl_schemas.yadg.dataschema_5_0.step.Parser attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults.timezone">(dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Parser.timezone_resolve_localtime">timezone_resolve_localtime() (dgbowl_schemas.yadg.dataschema_5_0.step.Parser class method)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults.timezone_resolve_localtime">(dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults class method)</a>
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.html#dgbowl_schemas.to_dataschema">to_dataschema() (in module dgbowl_schemas)</a>
