--- a/master/genindex.html
+++ b/master/genindex.html
@@ -731,9 +731,13 @@
         <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.extract_samplefile">(dgbowl_schemas.tomato.payload_0_2.Payload class method)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.BasicCSV.extractor">extractor (dgbowl_schemas.yadg.dataschema_5_0.step.BasicCSV attribute)</a>
+      <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.ExtractorFactory.extractor">extractor (dgbowl_schemas.yadg.dataschema_5_0.ExtractorFactory attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.ExtractorFactory.extractor">(dgbowl_schemas.yadg.dataschema_5_0.filetype.ExtractorFactory attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.BasicCSV.extractor">(dgbowl_schemas.yadg.dataschema_5_0.step.BasicCSV attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ChromData.extractor">(dgbowl_schemas.yadg.dataschema_5_0.step.ChromData attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ChromTrace.extractor">(dgbowl_schemas.yadg.dataschema_5_0.step.ChromTrace attribute)</a>
@@ -755,6 +759,12 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.XPSTrace.extractor">(dgbowl_schemas.yadg.dataschema_5_0.step.XPSTrace attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.XRDTrace.extractor">(dgbowl_schemas.yadg.dataschema_5_0.step.XRDTrace attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.ExtractorFactory.extractor_set_defaults">extractor_set_defaults() (dgbowl_schemas.yadg.dataschema_5_0.ExtractorFactory class method)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.ExtractorFactory.extractor_set_defaults">(dgbowl_schemas.yadg.dataschema_5_0.filetype.ExtractorFactory class method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -866,8 +876,6 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileTypeFactory.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.FileTypeFactory attribute)</a>
-</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.Fusion_csv.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.Fusion_csv attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.Fusion_json.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.Fusion_json attribute)</a>
@@ -889,8 +897,6 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.Quadstar_sac.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.Quadstar_sac attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.Tomato_json.filetype">(dgbowl_schemas.yadg.dataschema_5_0.filetype.Tomato_json attribute)</a>
-</li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.FileTypeFactory.filetype">(dgbowl_schemas.yadg.dataschema_5_0.FileTypeFactory attribute)</a>
 </li>
       </ul></li>
   </ul></td>
